IJPL-310 mark extensions as obsolete (part 10)
GitOrigin-RevId: 5091c58ed62bccf2eefa765cdee1316b77e93b93